spacing issue of list items temporarily sorted

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -136,7 +136,7 @@ ul {
 
 .list_element {
   min-width: 40vw;
-  height: 70px;
+  /* min-height: 30px; */
   border: 1px solid lightgrey;
   box-shadow: 1px 1px 1px lightgrey;
   border-radius: 10px;
@@ -145,6 +145,9 @@ ul {
 
 .flight_number, .mission_name {
   display: inline-block;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding-top: 0px;
 }
 
 .list_item_container_left, .list_item_container_right {
@@ -166,8 +169,7 @@ ul {
   font-weight: 500;
   font-style: normal;
   font-size: 40px;
-  margin-top: 5px;
-  padding-top: 0px;
+  padding-left: 15px;
 }
 
 .mission_name {
@@ -175,8 +177,6 @@ ul {
   font-weight: 500;
   font-style: normal;
   font-size: 32px;
-  margin-top: 5px;
-  padding-top: 0px;
 }
 
 
@@ -186,9 +186,11 @@ ul {
   font-weight: normal;
   font-style: normal;
   font-size: 16px;
-  margin-top: 5px;
+  margin-top: 10px;
   padding-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 2px;
+  padding-right: 10px;
+  text-align: right;
 }
 
 .rocket_name {
@@ -196,6 +198,8 @@ ul {
   font-weight: bold;
   font-style: normal;
   font-size: 24px;
-  margin-top: 0px;
+  margin-top: 2px;
+  margin-bottom: 0px;
+  padding-right: 10px;
   text-align: right;
 }
